--- a/resources/saleor/template.service
+++ b/resources/saleor/template.service
@@ -4,6 +4,6 @@ After=network.target
 [Service]
 User={un}
 Restart=always
-ExecStart={hd}/env/saleor/bin/uwsgi --master --emperor {hd}/env/saleor/vassals/prod.ini --uid {un} --gid www-data
+ExecStart=sudo {hd}/env/saleor/bin/uwsgi --master --emperor {hd}/env/saleor/vassals/prod.ini --uid {un} --gid www-data
 [Install]
 WantedBy=multi-user.target
